<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="pl.lodz.p.edu.handlers.ClickHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/single_item_name_label_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/name_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/single_item_min_temp_label_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:text="@string/min_temp_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/single_item_max_temp_label_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:text="@string/max_temp_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/single_item_weather_label_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/weather_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/single_item_activity_label_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/activity_label"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:context=".activities.ItemsActivity">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/items_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{(v) -> handler.onClick()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add_white_24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>