<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="handler"
            type="pl.lodz.p.edu.handlers.ClickHandler" />

        <variable
            name="itemsHandler"
            type="pl.lodz.p.edu.handlers.ClickHandler" />

        <variable
            name="packingListsHandler"
            type="pl.lodz.p.edu.handlers.ClickHandler" />

        <variable
            name="templatesHandler"
            type="pl.lodz.p.edu.handlers.ClickHandler" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.HomeActivity"
        android:background="@color/text_icons">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/listsButton"
            android:layout_width="@dimen/home_button_width"
            android:layout_height="@dimen/home_button_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/lists_label"
            style="@style/RoundedButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:onClick="@{() -> packingListsHandler.onClick()}"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/itemsButton"
            android:layout_width="@dimen/home_button_width"
            android:layout_height="@dimen/home_button_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/items_label"
            app:cornerRadius="@dimen/round_button_corner_radius"
            style="@style/RoundedButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listsButton"
            android:onClick="@{(v) -> itemsHandler.onClick()}"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/templatesButton"
            android:layout_width="@dimen/home_button_width"
            android:layout_height="@dimen/home_button_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/templates_label"
            style="@style/RoundedButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemsButton"
            android:onClick="@{(v) -> templatesHandler.onClick()}"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add_white_24dp"
            android:onClick="@{(v) -> handler.onClick()}"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="198dp"
            android:layout_height="320dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/packing_list_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>